Fixed collapsed event details in day, week, and month views. Fixed scrolling issue as well. #MBL-10739

--- a/content/css/app.less
+++ b/content/css/app.less
@@ -716,6 +716,20 @@ body.transition > .viewContainer > .footer-toolbar {
     font-weight: bold;
 }
 
+.event-content > h2 > button {
+    float: right;
+    background-color: transparent;
+    border: none;
+    height: 32px;
+}
+
+#calendar_daylist,
+#calendar_monthlist,
+#calendar_weeklist {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 #calendar_daylist .event-content > h2,
 #calendar_monthlist .event-content > h2,
 #calendar_monthlist .activity-content > h2,
